[package]
name = "chrono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
human-panic = "1.0.3"
[dependencies.confy]
features = ["yaml_conf"]
default-features = false
